# ns-discord-bots

./: README.md
c/: CMakeLists.txt  README.md  config.json
c/src/: main.c
c/src/commands/slash_commands/general/: ping.c  ping.h
c/src/configs/: bot_config.h
c/src/constants/: bot_const.h
c/src/events/: interaction_handler.c  interaction_handler.h  ready_handler.c  ready_handler.h
c/src/handlers/: command_handler.c  command_handler.h
javascript/: README.md  package-lock.json  package.json
python/: .env.example  .gitignore  README.md  bot.py  requirements.txt
python/commands/messageCommands/general/: ping.py
python/commands/slashCommands/general/: ping.py
python/configs/: bot_config.py
python/constants/: bot_const.py
python/events/: interaction_handler.py  message_handler.py  ready_handler.py
python/handlers/: command_handler.py
python/interfaces/: command_interface.py
python/utils/: logger.py
